client: fix tocs collapsed detect

--- a/packages/client/src/tiptap/editor/collaboration/collaboration/index.module.scss
+++ b/packages/client/src/tiptap/editor/collaboration/collaboration/index.module.scss
@@ -46,5 +46,10 @@
     display: flex;
     flex: 1;
     overflow: auto;
+
+    > div:first-of-type {
+      flex: 1;
+      width: 100%;
+    }
   }
 }
